--- a/app/components/satis/sidebar_menu_item/component.css
+++ b/app/components/satis/sidebar_menu_item/component.css
@@ -43,20 +43,20 @@
 }
 
 .page_bg .sidebar.close .sts-sidebar-menu-item:hover > [data-satis-sidebar-menu-item-target="submenu"] {
-  @apply rounded-md;
+  @apply rounded-md bg-white dark:bg-gray-900;
   display: block;
   visibility: visible;
   opacity: 1;
   position: absolute;
   margin-left: 35px;
   overflow-y: scroll;
-  overflow: visible;
   margin-top: -60px;
   padding-right: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
-  background: rgb(250, 250, 250);
-  box-shadow: -1px 0px 5px 0.5px #aaaaaa;
+  z-index: 1000;
+  overflow: visible;
+  box-shadow: -0.5px 0px 3px 0.3px #aaaaaa;
   transition: visibility 0s linear 0s, opacity 0.5s linear;
 }
 
